# nrf-hci-usb-rs

./: Cargo.toml  Embed.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
app/: Cargo.toml  memory.x
app/src/: ipc.rs  led.rs  main.rs  usb_hci.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
net/: Cargo.toml  build.rs  memory.x  uicr-approtect.hex
net/src/: main.rs
