[workspace]
members = ["app", "net", "ipc"]
default-members = ["app"]
resolver = "2"

# Profile settings apply at the workspace level
[profile.release]
debug = 2
opt-level = "s"
lto = "fat"
codegen-units = 1

[profile.dev]
debug = 2
opt-level = "s"

# Use graynode/nrf-sdc add-iso-bis-support branch (nrfxlib v3.2.4 + CIS/BIS support)
[patch.crates-io]
nrf-sdc      = { git = "https://github.com/graynode/nrf-sdc", rev = "2a4fca724163a30819314332aeb63490af4426fe"}
nrf-mpsl     = { git = "https://github.com/graynode/nrf-sdc", rev = "2a4fca724163a30819314332aeb63490af4426fe" }
nrf-sdc-sys  = { git = "https://github.com/graynode/nrf-sdc", rev = "2a4fca724163a30819314332aeb63490af4426fe" }
nrf-mpsl-sys = { git = "https://github.com/graynode/nrf-sdc", rev = "2a4fca724163a30819314332aeb63490af4426fe" }
