[package]
name = "thingy53-app"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "thingy53-app"
path = "src/main.rs"

[dependencies]
# Embassy framework — versions pinned to match nrf-sdc/nrf-mpsl constraints
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-nrf = { version = "0.9", features = [
    "nrf5340-app-s",
    "time-driver-rtc1",
    "gpiote",
    "defmt",
    "unstable-pac",
] }
embassy-usb = { version = "0.5", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = { version = "0.1" }

# ARM Cortex-M support
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

# Logging
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# Utilities
static_cell = "2"
heapless = "0.8"
thingy53-ipc = { path = "../ipc" }
